// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar shape 1`] = `
<div class="ca2-skeleton ca2-skeleton--animate">
  <div class="ca2-skeleton__avatar ca2-skeleton__avatar--square" style="width: 20px; height: 20px;"></div>
  <div class="ca2-skeleton__content"></div>
</div>
`;

exports[`disable animate 1`] = `
<div class="ca2-skeleton ca2-skeleton--animate">
  <div class="ca2-skeleton__content">
    <div class="ca2-skeleton__row" style="width: 60%;"></div>
  </div>
</div>
`;

exports[`render chidren 1`] = `<div>Content</div>`;

exports[`row-width array 1`] = `
<div class="ca2-skeleton ca2-skeleton--animate">
  <div class="ca2-skeleton__content">
    <div class="ca2-skeleton__row" style="width: 100%;"></div>
    <div class="ca2-skeleton__row" style="width: 30px;"></div>
    <div class="ca2-skeleton__row" style="width: 5rem;"></div>
    <div class="ca2-skeleton__row"></div>
  </div>
</div>
`;
